# memory-crystal

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  LETTERS.md  PLAN.md  PRD.md  README-ENTERPRISE.md  README-old.md  README.md  RELAY.md  RESEARCH.md  TECHNICAL.md  TODO.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json  wrangler-demo.toml  wrangler-mcp.toml  wrangler.toml
.github/workflows/: publish.yml
ai/: 2026-02-28--00-43-48--cc--dev-update-memory-crystal.md  2026-02-28--01-44-06--cc--dev-update-memory-crystal.md  2026-02-28--18-22-13--cc--dev-update-memory-crystal.md
migrations/: 0001_init.sql  0002_cloud_storage.sql
scripts/: crystal-capture.sh  deploy-cloud.sh  ldm-backup.sh  migrate-lance-to-sqlite.mjs
sdk/python/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdk/python/src/memory_crystal/: __init__.py  _transport.py  client.py
skills/memory/: SKILL.md
src/: bridge.ts  bulk-copy.ts  cc-hook.ts  cc-poller.ts  cli.ts  cloud-crystal.ts  core.ts  crypto.ts  crystal-serve.ts  dev-update.ts  discover.ts  doctor.ts  dream-weaver.ts  file-sync.ts  installer.ts  ldm.ts  llm.ts  mcp-server.ts  migrate.ts  mirror-sync.ts  oc-backfill.ts  openclaw.ts  pair.ts  poller.ts  role.ts  search-pipeline.ts  staging.ts  summarize.ts  worker-demo.ts  worker-mcp.ts  worker.ts
