[project]
name = "memory-crystal"
version = "0.1.0"
description = "Your memory. Your machine. Every model."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]
authors = [
    {name = "Parker Todd Brooks"},
    {name = "Lēsa"},
    {name = "Claude Opus 4.6"},
]
keywords = ["memory", "ai", "agent", "mcp", "crystal", "lume"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://wipcomputer.github.io/wip-homepage/"
Repository = "https://github.com/wipcomputer/memory-crystal-py"
Demo = "https://memory-crystal-demo.wipcomputer.workers.dev/mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_crystal"]
